==> etn-electrical/JIVE_Client_Code/Babelfish/Babelfish/Code/uC/STM32L4xx/uC_I2C.cpp <==
#include "uC_I2C.h"
#include "Babelfish_Assert.h"

void uC_I2C::Init_I2C( uint8_t i2c_channel, i2c_mode_t i2c_mode,
					   duty_type_t fmode_duty_cycle )
{
	uint32_t i2c_pclk1_freq;
	uint16_t i2c_ccr_value;
	uint16_t fast_mode_duty = 0U;
	uint32_t control_register;

	m_config = ( uC_Base::Self() )->Get_I2C_Ctrl( i2c_channel );
	BF_ASSERT( m_config != nullptr );
	i2c_ccr_value = m_config->irq_num;
	/* Get the base address of I2C channel */
	m_i2c = m_config->reg_ctrl;
	/* Put I2C peripheral in reset state */
	uC_Base::Reset_Periph( &m_config->periph_def );
	/*I2C Peripheral clock enable */
	uC_Base::Enable_Periph_Clock( &m_config->periph_def );

	/* Configure GPIOs for I2C(Serial Clock and serial data) functionalities */
	if ( m_io_ctrl == NULL )
	{
		m_io_ctrl = m_config->default_port_io;
	}
	uC_IO_Config::Enable_Periph_Output_Pin( m_io_ctrl->scl_port, true );
	/* Output type configuration*/
	control_register = ( ( m_io_ctrl->scl_port )->reg_ctrl )->OTYPER;
	BF_Lib::Bit::Set( control_register, ( m_io_ctrl->scl_port )->pio_num );
	( ( m_io_ctrl->scl_port )->reg_ctrl )->OTYPER = control_register;
	uC_IO_Config::Enable_Periph_Output_Pin( m_config->default_port_io->sda_port, true );
	control_register = ( ( m_io_ctrl->sda_port )->reg_ctrl )->OTYPER;
	BF_Lib::Bit::Set( control_register, ( m_io_ctrl->sda_port )->pio_num );
	( ( m_io_ctrl->sda_port )->reg_ctrl )->OTYPER = control_register;
	m_i2c->CR1 |= I2C_CR1_SWRST;
	/* Control register Settings */
	m_i2c->CR1 = 0U;/* Reset Control register 1 */
	m_i2c->CR2 = 0U;/* Reset Control register 2 */

	/*Peripheral clock frequency*/
	i2c_pclk1_freq = ( uC_Base::Self() )->Get_PClock_Freq(
		m_config->periph_def.pclock_reg_index );
	Set_Mask( m_i2c->CR2, I2C_CR2_FREQ, ( i2c_pclk1_freq / 1000000U ) );

	/* For CCR configuration the PE bit must be 0*/
	if ( true == static_cast<bool_t>( m_i2c->CR1 & I2C_CR1_PE ) )
	{
		Clr_Mask( m_i2c->CR1, I2C_CR1_PE );
	}

	if ( I2C_FAST_MODE == i2c_mode )
	{
		if ( FASTMODE_DUTYCYCLE_2 == fmode_duty_cycle )
		{
			i2c_ccr_value = static_cast<uint16_t>( i2c_pclk1_freq
												   / ( I2C_ClockSpeed_400K * 3U ) );
			fast_mode_duty = static_cast<uint16_t>( 0x8000U );
		}
		else// FASTMODE_DUTYCYCLE_16_9
		{
			i2c_ccr_value = static_cast<uint16_t>( i2c_pclk1_freq
												   / ( I2C_ClockSpeed_400K * 25U ) );
			fast_mode_duty = static_cast<uint16_t>( 0xC000U );
		}
		if ( i2c_ccr_value < 1U )
		{
			/* Set minimum allowed value */
			i2c_ccr_value = 1U;
		}
		m_i2c->CCR = ( i2c_ccr_value | fast_mode_duty );
		m_i2c->TRISE =
			static_cast<uint16_t>( ( i2c_pclk1_freq * 3U ) / ( 10000000U ) ) + 1U;		// in fast
																						// mode, the
																						// maximum
																						// allowed SCL
																						// rise time
																						// is 300 ns
	}
	else
	{
		i2c_ccr_value = static_cast<uint16_t>( i2c_pclk1_freq
											   / ( I2C_ClockSpeed_100K << 1U ) );
		if ( i2c_ccr_value < 4U )
		{
			/* Set minimum allowed value */
			i2c_ccr_value = 4U;
		}
		m_i2c->CCR = i2c_ccr_value;
		m_i2c->TRISE = static_cast<uint16_t>( ( i2c_pclk1_freq ) / ( 1000000U ) )
			+ 1U;	// in standard mode, the maximum allowed SCL rise time is 1000 ns
	}

	Enable_I2C();
	m_i2c->CR1 |= I2C_CR1_ACK;

	if ( ( m_config->rx_dma_channel != uC_DMA_STREAM_DNE ) &&
		 ( m_config->tx_dma_channel != uC_DMA_STREAM_DNE ) &&
		 ( true == m_dma_transfer ) )
	{
		uC_DMA::Deallocate_DMA_Stream( m_config->rx_dma_channel );
		m_rx_dma = new uC_DMA( m_config->rx_dma_channel, uC_DMA_DIR_FROM_PERIPH,
							   sizeof( uint8_t ), uC_DMA_MEM_INC_TRUE, uC_DMA_PERIPH_INC_FALSE,
							   uC_DMA_CIRC_FALSE );

		m_rx_dma->Clear_Int();
		m_rx_dma->Attach_Callback( &RX_DMA_Int_Static,
								   static_cast<uC_DMA::cback_param_t>( this ),
								   static_cast<uint8_t>( uC_INT_HW_PRIORITY_11 ) );

		uC_DMA::Deallocate_DMA_Stream( m_config->tx_dma_channel );
		m_tx_dma = new uC_DMA( m_config->tx_dma_channel, uC_DMA_DIR_FROM_MEMORY,
							   sizeof( uint8_t ), uC_DMA_MEM_INC_TRUE, uC_DMA_PERIPH_INC_FALSE,
							   uC_DMA_CIRC_FALSE );

		m_tx_dma->Clear_Int();
		m_tx_dma->Attach_Callback( &TX_DMA_Int_Static,
								   static_cast<uC_DMA::cback_param_t>( this ),
								   static_cast<uint8_t>( uC_INT_HW_PRIORITY_11 ) );
	}

	if ( ( false == m_synchronous_type ) && ( false == m_dma_transfer ) )
	{

		m_i2c_vector_number = m_config->irq_num;
		/* Configure the interrupt for I2C events */
		m_i2c_vector_obj = new Advanced_Vect();

		m_i2c_vector_obj->Set_Vect( &I2C_ISR_Static,
									static_cast<Advanced_Vect::cback_param_t>( this ) );
		uC_Interrupt::Clear_Vector( m_i2c_vector_number );
		uC_Interrupt::Set_Vector(
			static_cast<Advanced_Vect::int_cback_t>( m_i2c_vector_obj->Get_Int_Func() ),
			m_i2c_vector_number, uC_INT_HW_PRIORITY_11 );
		m_i2c->CR2 |= I2C_CR2_ITERREN | I2C_CR2_ITEVTEN;
		m_data_sink = m_i2c->DR;
		/* Enable I2C interrupt vector event */
		uC_Interrupt::Clear_Int( m_i2c_vector_number );
	}
}

void uC_I2C::Read( uint16_t address, uint16_t length, uint8_t* datasource,
				   i2c_status_t* read_status )
{
	return_type error = NO_ERROR;
	i2c_states_t state = START_STATE;
	uint8_t number_of_bytes = 0U;

	m_transfer_status = NO_ERROR_INIT;
	/** Implement the I2C Read State machine here */
	Clear_Error();
	m_i2c->CR1 |= I2C_CR1_ACK;
	Bus_Busy_TimeOut();

	m_command_t = address;
	if ( ( false == m_synchronous_type ) && ( m_dma_transfer == false ) )
	{
		m_transfer_length = length;
		m_write_exchange = false;
		m_rx_data = datasource;
		m_i2c->CR2 |= I2C_CR2_ITERREN | I2C_CR2_ITEVTEN;
		uC_Interrupt::Clear_Int( m_i2c_vector_number );
		uC_Interrupt::Enable_Int( m_i2c_vector_number );
		m_i2c->CR1 |= I2C_CR1_START;
		m_state_machine = START_STATE;
	}
	else
	{

		while ( state < MAX_STATE )
		{
			switch ( state )
			{
				case START_STATE:
					error = Generate_Start();
					m_transfer_status = Set_State( error, &state, SET_DEVICE_ADDRESS,
												   START_GENERATION_ERROR );
					break;

				case SET_DEVICE_ADDRESS:
					error = Send_Device_Address( m_chip_address, I2C_WRITE );
					m_transfer_status = Set_State( error, &state, SET_COMMAND,
												   ADDRESS_ERROR );
					break;

				case SET_COMMAND:
					error = Send_Data( static_cast<uint8_t>( address ) );
					m_transfer_status = Set_State( error, &state, REPEATED_START_STATE,
												   BYTE_TX_ERROR );
					break;

				case REPEATED_START_STATE:
					error = Generate_Start();
					m_transfer_status = Set_State( error, &state,
												   REPEAT_DEVICE_ADDRESS, RSTART_GENERATION_ERROR );
					break;

				case REPEAT_DEVICE_ADDRESS:
					if ( true == m_dma_transfer )
					{
						if ( length == 1U )
						{
							m_i2c->CR1 &= ( ~I2C_CR1_ACK );
						}

						Set_RX_DMA( datasource, length );
						Enable_RX_DMA();
						state = MAX_STATE;
						Send_Device_Address( m_chip_address, I2C_READ );
						m_transfer_status = I2C_DMA_RX_BUSY;
						m_rx_dma->Clear_Int();
						m_rx_dma->Enable_End_Buff_Int();
						m_rx_dma->Enable_Int();
					}
					else
					{
						error = Send_Device_Address( m_chip_address, I2C_READ );
						m_transfer_status = Set_State( error, &state, RECEIVE_DATA,
													   ADDRESS_ERROR );
					}
					break;

				case RECEIVE_DATA:
					for ( number_of_bytes = 0U;
						  ( number_of_bytes < length ) && ( NO_ERROR == error );
						  number_of_bytes++ )
					{
						if ( number_of_bytes == ( length - 1U ) )
						{
							m_i2c->CR1 &= ( ~I2C_CR1_ACK );
						}

						error = Receive_Data( datasource );
						datasource++;
					}
					m_transfer_status = Set_State( error, &state, STOP_CONDITION,
												   BYTE_RX_ERROR );

					break;

				case STOP_CONDITION:
					error = Set_Stop();
					m_transfer_status = Set_State( error, &state, MAX_STATE,
												   STOP_GENERATION_ERROR );
					m_transfer_status = I2C_FINISH_RX;
					break;

				case SEND_DATA:

				case MAX_STATE:

				default:
					state = MAX_STATE;
					break;
			}
		}

		if ( read_status != nullptr )
		{
			*read_status = m_transfer_status;
		}
	}
}

uC_I2C::return_type uC_I2C::Generate_Start( void )
{
	m_i2c->CR1 |= I2C_CR1_START;
	return ( Wait_Flag_Timeout( I2C_SR1_SB ) );
}

uC_I2C::return_type uC_I2C::Set_Stop( void )
{
	m_i2c->CR1 &= ( ~I2C_CR1_ACK );
	m_i2c->CR1 |= I2C_CR1_STOP;
	Nop();
	return ( NO_ERROR );
}

uC_I2C::return_type uC_I2C::Send_Data( uint8_t data )
{
	m_i2c->DR = data;
	return ( Wait_Flag_Timeout( I2C_SR1_BTF | I2C_SR1_TXE ) );
}

uC_I2C::return_type uC_I2C::Receive_Data( uint8_t* data ) const
{
	return_type receive_status = Wait_Flag_Timeout( I2C_SR1_RXNE );

	if ( receive_status == NO_ERROR )
	{
		*data = static_cast<uint8_t>( m_i2c->DR );
	}
	return ( receive_status );
}

void uC_I2C::Enable_I2C( void )
{
	m_i2c->CR1 |= I2C_CR1_PE;
}

void uC_I2C::Attach_Callback( cback_func_t cback_func, cback_param_t param )
{
	m_call_back_ptr = cback_func;
	m_cback_param = param;
}

void uC_I2C::I2C_ISR( void )
{
	uint16_t i2c_address;

	/* It looks like a bulky ISR.
	   However from timing perspective only single  case shall be executed during one interrupt
	   The reading of SR1 and SR2 is crucial in I2C. Its not redundant code*/
	switch ( m_state_machine )
	{	/* State for sending device address/ start frame ACK */
		case START_STATE:
			if ( true == static_cast<bool_t>( Get_SR1() & I2C_SR1_SB ) )
			{
				Get_SR2();
				/* To check if it is a 10 bit addressing mode or 7 bit addressing mode */
				if ( m_chip_address < MAX_END_ADDR_7_BIT )
				{	/* 0 because its write operation */
					m_i2c->DR =
						static_cast<uint16_t>( ( m_chip_address << 1U )	/* | 0x00U */ );
					m_state_machine = SET_COMMAND;
				}
				else if ( ( m_chip_address > MAX_END_ADDR_7_BIT ) &&
						  ( m_chip_address < MAX_END_ADDR_10_BIT ) )
				{
					i2c_address = ( ( m_chip_address >> 8U ) & 0x03U );
					/* Take out 8th and 9th bit */
					i2c_address = static_cast<uint16_t>( i2c_address << 1 );
					m_i2c->DR = ( ADDR_HEADER_10_BIT | i2c_address /* | 0x00U */ );
					m_state_machine = SET_DEVICE_ADDRESS;
				}
				else
				{
					m_state_machine = MAX_STATE;
				}
			}
			break;

		/* Send upper byte of an address in case of 10 bit addressing mode */
		case SET_DEVICE_ADDRESS:
			if ( true == static_cast<bool_t>( Get_SR1() & I2C_SR1_ADD10 ) )
			{
				Get_SR2();
				i2c_address = m_chip_address & 0xFFU;
				m_i2c->DR = i2c_address;
				m_state_machine = SET_COMMAND;
			}
			break;

		/* Device address Acknowledge state. Also used for sending command to device */
		case SET_COMMAND:
			if ( true == static_cast<bool_t>( Get_SR1() & I2C_SR1_TXE ) )
			{
				Get_SR2();
				m_i2c->DR = m_command_t;
				if ( m_write_exchange == true )
				{
					m_state_machine = SEND_DATA;
				}
				else
				{
					m_state_machine = REPEATED_START_STATE;
				}
			}
			break;

		/* Repeated start condition in case of read mode */
		case REPEATED_START_STATE:
			if ( ( true == static_cast<bool_t>( ( Get_SR1() & I2C_SR1_BTF ) ) ) ||
				 ( true == static_cast<bool_t>( ( Get_SR1() & I2C_SR1_TXE ) ) ) )
			{
				Generate_Start();
				m_state_machine = REPEAT_DEVICE_ADDRESS;
			}
			break;

		/* Repeat Device address in case of I2C read mode */
		case REPEAT_DEVICE_ADDRESS:
			if ( true == static_cast<bool_t>( Get_SR1() & I2C_SR1_SB ) )
			{
				Get_SR2();
				if ( m_chip_address < MAX_END_ADDR_7_BIT )
				{	/* 1 because its read operation */
					m_i2c->DR =
						( ( static_cast<uint16_t>( m_chip_address << 1U ) ) | 0x01U );
					m_state_machine = RECEIVE_DATA;
				}
				else if ( ( m_chip_address > MAX_END_ADDR_7_BIT ) &&
						  ( m_chip_address < MAX_END_ADDR_10_BIT ) )
				{
					i2c_address = ( ( m_chip_address >> 8U ) & 0x03U );
					/* Take out 8th and 9th bit */
					i2c_address = static_cast<uint16_t>( i2c_address << 1U );
					m_i2c->DR = ( ADDR_HEADER_10_BIT | i2c_address | 0x01U );
					m_state_machine = RECEIVE_DATA;
				}
				else
				{
					m_state_machine = MAX_STATE;
				}
			}
			break;

		/* State for sending data to slave */
		case SEND_DATA:
			if ( ( true == static_cast<bool_t>( ( Get_SR1() & I2C_SR1_BTF ) ) ) ||
				 ( true == static_cast<bool_t>( ( Get_SR1() & I2C_SR1_TXE ) ) ) )
			{
				m_transfer_length--;
				m_i2c->DR = *m_tx_data;
				m_tx_data += 1U;
				if ( m_transfer_length == 0U )
				{
					m_state_machine = STOP_CONDITION;
				}
			}
			break;

		/* State for receiving data from slave */
		case RECEIVE_DATA:
			Get_SR2();
			if ( true == static_cast<bool_t>( Get_SR1() & I2C_SR1_RXNE ) )
			{
				*m_rx_data = static_cast<uint8_t>( m_i2c->DR );
				m_transfer_length--;
				m_rx_data += 1U;
				if ( m_transfer_length == 0U )
				{
					m_state_machine = STOP_CONDITION;
				}
				Get_SR2();
				/* In I2C interrupt driven system it is required to read the SR2 register
				   after each byte transmission to clear the flags like ADDR if they are set . */
			}
			break;

		/* State which sets the stop bit */
		case STOP_CONDITION:
			if ( ( true == static_cast<bool_t>( ( Get_SR1() & I2C_SR1_BTF ) ) ) ||
				 ( true == static_cast<bool_t>( ( Get_SR1() & I2C_SR1_TXE ) ) ) )
			{
				Get_SR2();
				m_state_machine = MAX_STATE;
				m_i2c->CR2 &=
					~( I2C_CR2_ITERREN | I2C_CR2_ITEVTEN | I2C_CR2_ITBUFEN );
				Set_Stop();

				( *m_call_back_ptr )( m_cback_param );
			}
			break;

		default:
			break;

	}
}
