==> etn-electrical/JIVE_Client_Code/Babelfish/Code/uC/ESP32D0WD/uC_I2C.cpp <==
#include "uC_I2C.h"
#include "uC_IO_Config.h"
#include "driver/periph_ctrl.h"

void uC_I2C::Init_I2C( uint8_t i2c_channel, i2c_mode_t i2c_mode,
					   duty_type_t fmode_duty_cycle )
{
	int cycle;
	int half_cycle;
	esp_err_t ret;
	i2c_port_t i2c_num = ( i2c_port_t )i2c_channel;

	m_config = &( uC_Base::m_i2c_io[i2c_num] );

	Check_I2C( i2c_num < I2C_NUM_MAX, "i2c number error", ESP_ERR_INVALID_ARG );
	Check_I2C( m_config != NULL, "i2c null address error", ESP_ERR_INVALID_ARG );
	ret = Set_I2C_Pins( i2c_num );

	if ( ret != ESP_OK )
	{
		return;
	}
	// Reset the I2C hardware in case there is a soft reboot.
	Disable_I2C( i2c_num );
	Enable_I2C( i2c_num );
	I2C[i2c_num]->ctr.rx_lsb_first = I2C_DATA_MODE_MSB_FIRST;	///< set rx data msb first
	I2C[i2c_num]->ctr.tx_lsb_first = I2C_DATA_MODE_MSB_FIRST;	///< set tx data msb first
	I2C[i2c_num]->ctr.ms_mode = I2C_MODE_MASTER;				///< mode for master or slave
	I2C[i2c_num]->ctr.sda_force_out = ENABLE_VALUE;				///< set open-drain output mode
	I2C[i2c_num]->ctr.scl_force_out = ENABLE_VALUE;				///< set open-drain output mode
	I2C[i2c_num]->ctr.sample_scl_level = DISABLE_VALUE;			///< sample at high level of clock

	// I2C Master mode initialization
	I2C[i2c_num]->fifo_conf.nonfifo_en = DISABLE_VALUE;
	cycle = ( I2C_APB_CLK_FREQ / m_config->clk_speed );
	half_cycle = cycle / HALFCYCLE_DIV_VALUE;
	I2C[i2c_num]->timeout.tout = cycle * I2C_MASTER_TOUT_CNUM_DEFAULT;

	// set timing for data
	I2C[i2c_num]->sda_hold.time = half_cycle / HALFCYCLE_DIV_VALUE;
	I2C[i2c_num]->sda_sample.time = half_cycle / HALFCYCLE_DIV_VALUE;
	I2C[i2c_num]->scl_low_period.period = half_cycle;
	I2C[i2c_num]->scl_high_period.period = half_cycle;

	// set timing for start signal
	I2C[i2c_num]->scl_start_hold.time = half_cycle;
	I2C[i2c_num]->scl_rstart_setup.time = half_cycle;

	// set timing for stop signal
	I2C[i2c_num]->scl_stop_hold.time = half_cycle;
	I2C[i2c_num]->scl_stop_setup.time = half_cycle;

	I2C_Driver_Install( i2c_num, DISABLE_VALUE,
						DISABLE_VALUE, DISABLE_VALUE );
}

uC_I2C::return_type uC_I2C::Read( uint16_t address, uint16_t length, uint8_t* datasource,
								  i2c_status_t* read_status, i2c_cmd_handle_t cmd )
{
	return_type error = NO_ERROR;
	esp_err_t ret;
	i2c_port_t i2c_num = ( i2c_port_t ) m_channel_number;

	m_chip_address = address;

	if ( length == 0 )
	{
		return ( NO_ERROR );
	}
	Generate_Start( cmd );
	Send_Data( ( m_chip_address << 1 ) | I2C_MASTER_READ, ACK_CHECK_EN, cmd );

	if ( length > 1 )
	{
		length = length - ENABLE_VALUE;
		Check_I2C( length > 0, "i2c data read length error", ESP_ERR_INVALID_ARG );
		Check_I2C( ( datasource != NULL ), "i2c null address error", ESP_ERR_INVALID_ARG );
		Check_I2C( cmd != NULL, "i2c command link error", ESP_ERR_INVALID_ARG );
		i2c_master_read( cmd, datasource, length, I2C_MASTER_ACK );
	}

	error = Receive_Data( datasource, I2C_MASTER_NACK, cmd );
	Set_Stop( cmd );

	ret = i2c_master_cmd_begin( i2c_num, cmd, TICKS_CAL_VALUE / portTICK_RATE_MS );
	i2c_cmd_link_delete( cmd );
	if ( ret == ESP_OK )
	{
		error = NO_ERROR;
	}
	else
	{
		error = I2C_ERROR;
	}
	return ( error );
}

uC_I2C::return_type uC_I2C::Generate_Start( i2c_cmd_handle_t cmd_handle )
{
	esp_err_t error;

	Check_I2C( cmd_handle != NULL, "i2c command link error", ESP_ERR_INVALID_ARG );
	error = i2c_master_start( cmd_handle );
	if ( error == ESP_OK )
	{
		return ( NO_ERROR );
	}
	else
	{
		return ( I2C_ERROR );
	}
}

uC_I2C::return_type uC_I2C::Set_Stop( i2c_cmd_handle_t cmd_handle )
{
	esp_err_t error;

	Check_I2C( cmd_handle != NULL, "i2c command link error", ESP_ERR_INVALID_ARG );
	error = i2c_master_stop( cmd_handle );
	if ( error == ESP_OK )
	{
		return ( NO_ERROR );
	}
	else
	{
		return ( I2C_ERROR );
	}
}

uC_I2C::return_type uC_I2C::Send_Data( uint8_t data, bool ack_en, i2c_cmd_handle_t cmd_handle )
{
	esp_err_t error;

	Check_I2C( cmd_handle != NULL, "i2c command link error", ESP_ERR_INVALID_ARG );
	error = i2c_master_write_byte( cmd_handle, data, ack_en );
	if ( error == ESP_OK )
	{
		return ( NO_ERROR );
	}
	else
	{
		return ( I2C_ERROR );
	}
}

uC_I2C::return_type uC_I2C::Receive_Data( uint8_t* data, i2c_ack_type_t ack, i2c_cmd_handle_t cmd_handle ) const
{
	esp_err_t error;

	Check_I2C( ( data != NULL ), "i2c null address error", ESP_ERR_INVALID_ARG );
	Check_I2C( cmd_handle != NULL, "i2c command link error", ESP_ERR_INVALID_ARG );
	Check_I2C( ack < I2C_MASTER_ACK_MAX, "i2c ack type error", ESP_ERR_INVALID_ARG );
	error = i2c_master_read_byte( cmd_handle, data, I2C_MASTER_NACK );
	if ( error == ESP_OK )
	{
		return ( NO_ERROR );
	}
	else
	{
		return ( I2C_ERROR );
	}
}

void uC_I2C::Enable_I2C( i2c_port_t i2c_num )
{
	if ( i2c_num == I2C_NUM_0 )
	{
		periph_module_enable( PERIPH_I2C0_MODULE );
	}
	else if ( i2c_num == I2C_NUM_1 )
	{
		periph_module_enable( PERIPH_I2C1_MODULE );
	}
}

void uC_I2C::Attach_Callback( cback_func_t cback_func, cback_param_t param )
{
	interrupt_config_t* interrupt_config = reinterpret_cast<interrupt_config_t*>( param );
	i2c_port_t i2c_num = ( i2c_port_t ) m_channel_number;
	uint8_t int_priority = DISABLE_VALUE;

	Check_I2C( i2c_num < I2C_NUM_MAX, "i2c number error", ESP_ERR_INVALID_ARG );
	Check_I2C( interrupt_config->handler != NULL, "i2c null address error", ESP_ERR_INVALID_ARG );

	interrupt_config->intrstatusreg = DISABLE_VALUE;
	interrupt_config->intrstatusmask = DISABLE_VALUE;

	switch ( i2c_num )
	{
		case I2C_NUM_1:
			interrupt_config->source = ETS_I2C_EXT1_INTR_SOURCE;
			break;

		case I2C_NUM_0:
		default:
			interrupt_config->source = ETS_I2C_EXT0_INTR_SOURCE;
			break;
	}
	uC_Interrupt::Set_Vector( reinterpret_cast<INT_CALLBACK_FUNC*>( interrupt_config ), MAX_IRQTYPE,
							  int_priority );
}

void uC_I2C::I2C_ISR( void* arg )
{
	i2c_obj_t* p_i2c = ( i2c_obj_t* ) arg;
	int32_t i2c_num = p_i2c->i2c_num;
	uint32_t status = I2C[i2c_num]->int_status.val;
	int32_t idx = 0;
	int32_t evt;

	portBASE_TYPE HPTaskAwoken = pdFALSE;

	while ( status != 0 )
	{
		status = I2C[i2c_num]->int_status.val;
		if ( status & I2C_TX_SEND_EMPTY_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.tx_send_empty = ENABLE_VALUE;
		}
		else if ( status & I2C_RX_REC_FULL_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.rx_rec_full = ENABLE_VALUE;
		}
		else if ( status & I2C_ACK_ERR_INT_ST_M )
		{
			I2C[i2c_num]->int_ena.ack_err = DISABLE_VALUE;
			I2C[i2c_num]->int_clr.ack_err = ENABLE_VALUE;
			if ( p_i2c->mode == I2C_MODE_MASTER )
			{
				p_i2c_obj[i2c_num]->status = uC_I2C::I2C_STATUS_ACK_ERROR;
				I2C[i2c_num]->int_clr.ack_err = ENABLE_VALUE;
				// get error ack value from slave device, stop the commands
				uC_I2C::I2C_ISR_Static( nullptr, i2c_num );
			}
		}
		else if ( status & I2C_TRANS_START_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.trans_start = ENABLE_VALUE;
		}
		else if ( status & I2C_TIME_OUT_INT_ST_M )
		{
			I2C[i2c_num]->int_ena.time_out = DISABLE_VALUE;
			I2C[i2c_num]->int_clr.time_out = ENABLE_VALUE;
			p_i2c_obj[i2c_num]->status = uC_I2C::I2C_STATUS_TIMEOUT;
			uC_I2C::I2C_ISR_Static( nullptr, i2c_num );
		}
		else if ( status & I2C_TRANS_COMPLETE_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.trans_complete = ENABLE_VALUE;
			if ( p_i2c->mode == I2C_MODE_SLAVE )
			{
				int rx_fifo_cnt = I2C[i2c_num]->status_reg.rx_fifo_cnt;
				for ( idx = 0; idx < rx_fifo_cnt; idx++ )
				{
					p_i2c->data_buf[idx] = I2C[i2c_num]->fifo_data.data;
				}
				xRingbufferSendFromISR( p_i2c->rx_ring_buf, p_i2c->data_buf, rx_fifo_cnt, &HPTaskAwoken );
				I2C[i2c_num]->int_clr.rx_fifo_full = ENABLE_VALUE;
			}
			else
			{
				// add check for unexcepted situations caused by noise.
				if ( ( p_i2c->status != uC_I2C::I2C_STATUS_ACK_ERROR ) && ( p_i2c->status != uC_I2C::I2C_STATUS_IDLE ) )
				{
					uC_I2C::I2C_ISR_Static( nullptr, i2c_num );
				}
			}
		}
		else if ( status & I2C_MASTER_TRAN_COMP_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.master_tran_comp = ENABLE_VALUE;
		}
		else if ( status & I2C_ARBITRATION_LOST_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.arbitration_lost = ENABLE_VALUE;
			p_i2c_obj[i2c_num]->status = uC_I2C::I2C_STATUS_TIMEOUT;
			uC_I2C::I2C_ISR_Static( nullptr, i2c_num );
		}
		else if ( status & I2C_SLAVE_TRAN_COMP_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.slave_tran_comp = ENABLE_VALUE;
		}
		else if ( status & I2C_END_DETECT_INT_ST_M )
		{
			I2C[i2c_num]->int_ena.end_detect = DISABLE_VALUE;
			I2C[i2c_num]->int_clr.end_detect = ENABLE_VALUE;
			uC_I2C::I2C_ISR_Static( nullptr, i2c_num );
		}
		else if ( status & I2C_RXFIFO_OVF_INT_ST_M )
		{
			I2C[i2c_num]->int_clr.rx_fifo_ovf = ENABLE_VALUE;
		}
		else if ( status & I2C_TXFIFO_EMPTY_INT_ST_M )
		{
			int32_t tx_fifo_rem = SOC_I2C_FIFO_LEN - I2C[i2c_num]->status_reg.tx_fifo_cnt;
			size_t size = DISABLE_VALUE;
			uint8_t* data = ( uint8_t* ) xRingbufferReceiveUpToFromISR( p_i2c->tx_ring_buf, &size, tx_fifo_rem );
			if ( data )
			{
				for ( idx = 0; idx < size; idx++ )
				{
					WRITE_PERI_REG( I2C_DATA_APB_REG( i2c_num ), data[idx] );
				}
				vRingbufferReturnItemFromISR( p_i2c->tx_ring_buf, data, &HPTaskAwoken );
				I2C[i2c_num]->int_ena.tx_fifo_empty = ENABLE_VALUE;
				I2C[i2c_num]->int_clr.tx_fifo_empty = ENABLE_VALUE;
			}
			else
			{
				I2C[i2c_num]->int_ena.tx_fifo_empty = DISABLE_VALUE;
				I2C[i2c_num]->int_clr.tx_fifo_empty = ENABLE_VALUE;
			}
		}
		else if ( status & I2C_RXFIFO_FULL_INT_ST_M )
		{
			int32_t rx_fifo_cnt = I2C[i2c_num]->status_reg.rx_fifo_cnt;
			for ( idx = 0; idx < rx_fifo_cnt; idx++ )
			{
				p_i2c->data_buf[idx] = I2C[i2c_num]->fifo_data.data;
			}
			xRingbufferSendFromISR( p_i2c->rx_ring_buf, p_i2c->data_buf, rx_fifo_cnt, &HPTaskAwoken );
			I2C[i2c_num]->int_clr.rx_fifo_full = ENABLE_VALUE;
		}
		else
		{
			I2C[i2c_num]->int_clr.val = status;
		}
	}
	if ( p_i2c->mode == I2C_MODE_MASTER )
	{
		evt = I2C_CMD_EVT_ALIVE;
		xQueueSendFromISR( p_i2c->cmd_evt_queue, &evt, &HPTaskAwoken );
	}
	// We only need to check here if there is a high-priority task needs to be switched.
	if ( HPTaskAwoken == pdTRUE )
	{
		portYIELD_FROM_ISR();
	}

}
